--- a/app/src/main/res/layout/activity_7.xml
+++ b/app/src/main/res/layout/activity_7.xml
@@ -1,9 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".exercise_03_linear_layouts.Activity7">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".exercise_03_linear_layouts.Activity7"
+android:orientation="vertical"
+android:weightSum="10"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:background="@drawable/logo"
+            android:layout_margin="5dp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Software Development"
+            android:id="@+id/text12"
+            android:textSize="30dp"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:paddingVertical="30dp"
+            />
+
+    </LinearLayout>
+
+
+
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:id="@+id/button1"
+    android:layout_margin="10dp"
+    android:background="@drawable/bgimg"
+    android:layout_weight="1"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Android"
+            android:id="@+id/text1"
+            android:textSize="30dp"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:paddingVertical="30dp"
+            android:layout_weight="1"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="IOS Apps"
+            android:id="@+id/text123"
+            android:textSize="30dp"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:paddingVertical="30dp"
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        >
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Android is a mobile operating system based on a modified version of the Linux kernel"
+            android:id="@+id/text13"
+            android:textSize="20dp"
+            android:textAlignment="center"
+            android:layout_gravity="center_horizontal"
+            android:paddingVertical="30dp"
+            android:layout_weight="1"
+            android:textColor="#FF00FF"
+            />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="iOS is a mobile operating system developed by Apple Inc."
+            android:id="@+id/text183"
+            android:textSize="20dp"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:paddingVertical="30dp"
+            android:layout_weight="1"
+            android:textColor="#FF00FF"
+            />
+
+    </LinearLayout>
+
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Register"
+    android:id="@+id/button2"
+    android:background="#0058b6"
+    android:textSize="25dp"
+    android:layout_gravity="center"
+    android:layout_margin="5dp"
+    android:layout_weight="1"/>
+
+</LinearLayout>
